--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <title>NewTab</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="keywords" content="twitch,newtab,bookmarks">
+  <meta name="description" content="NewTab page with Twitch integration for followed live channels.">
 </head>
 <body>
   <app-root></app-root>
