Updated for new Twitch API, needs new bookmark popup, some tweeks and comments, but this is a pure private use project so maybe some day

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,10 @@
   <title>NewTab</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="twitch,newtab,bookmarks">
-  <meta name="description" content="NewTab page with Twitch integration for followed live channels.">
+  <meta name="robots" content="noindex, nofollow">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Arvo:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
